--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
       <url>http://localhost:8081/nexus/service/local/staging/deploy/maven2</url>
     </repository>
     <snapshotRepository>
-      <id>nexus</id>
+      <id>test</id>
       <name>Nexus Snapshot</name>
-      <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+      <url>http://52.14.105.252:8081/nexus/content/repositories/snapshots</url>
     </snapshotRepository>
     <site>
       <id>nexus</id>
